# hw06-nwhaq1

./: .buildinfo  Makefile  README.html  README.md  _config.yml  _toc.yml  conf.py  environment.yml  genindex.html  hw06-description.html  hw06-index.html  index.html  index.ipynb  index.md  objects.inv  postBuild  search.html  searchindex.js  setup.cfg  setup.sh
.doctrees/: README.doctree  environment.pickle  hw06-index.doctree  intro.doctree
.doctrees/.pytest_cache/: README.doctree
.doctrees/mynewbook/: intro.doctree  markdown.doctree
.github/workflows/: book.yml
.pytest_cache/: README.html
_build/.doctrees/: README.doctree  environment.pickle  hw06-description.doctree  hw06-index.doctree  hw06_index.doctree  index.doctree
_build/.doctrees/mynewbook/: notebooks.doctree
_build/html/: .buildinfo  README.html  genindex.html  hw06-description.html  hw06-index.html  hw06_index.html  index.html  intro.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  environment.pickle  genindex.doctree  index.doctree
_build/html/_sources/: README.md
_build/html/mynewbook/: intro.html  markdown.html
_build/jupyter_execute/: hw06-index.ipynb  hw06-index.py  hw06_index.ipynb  hw06_index.py  index.ipynb  index.py
_sources/: README.md  hw06-index.ipynb
_sources/mynewbook/: markdown.md
data/: GW150914_data.csv
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO  SOURCES.txt
ligotools/tests/: test_readligo.py  test_utils.py
mynewbook/: _config.yml  _toc.yml  markdown-notebooks.html  notebooks.html
(+28 files in other folders)
