# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Neha Haq
author_email     = nwhaq1@berkeley.edu
description      = A Python library to import Ligotools methods
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, ligotools
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 2.7,
install_requires= numpy
# install_requires= numpy==1.16
#                   decorator==4.4
#                   ipykernel==4.8
#                   numpy==1.16
#                   #scipy==1.2
#                   matplotlib==2.2
#                   h5py==2.10

[options.packages.find]
exclude =
    examples*
    docs*
    ligotools.tests*